<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".entryFragment"
    android:padding="10dp">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_first_name"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:inputType="text"
        android:id="@+id/first_name"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_second_name"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/first_name"
        android:paddingTop="20dp"
        android:inputType="text"
        android:id="@+id/second_name"
         />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_third_name"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/second_name"
        android:paddingTop="20dp"
        android:inputType="text"
        android:id="@+id/third_name"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/colorAccent"
        android:layout_below="@id/third_name"
        android:id="@+id/button_save"
        />




</RelativeLayout>